# deepface_ros

./: README.md  requirements.txt
deepface_bringup/: CMakeLists.txt  package.xml
deepface_bringup/launch/: bringup.launch.py
deepface_msgs/: CMakeLists.txt  package.xml
deepface_msgs/msg/: Emotion.msg  FaceAnalysis.msg  FaceDetection.msg  FacesAnalysis.msg  Gender.msg  Race.msg
deepface_msgs/srv/: FaceAnalysis.srv  FacesAnalysis.srv  ImageFacesAnalysis.srv
deepface_ros/: package.xml  setup.cfg  setup.py
deepface_ros/deepface_ros/: .test.py.swp  deepface_node.py
